# rake

./: Dockerfile  LICENSE  init.sh  main.py  model.py  pyproject.toml  rake_service.py  route.py  settings.py
tests/: test_extract_key_phrases.py
