[tool.poetry]
name = "extract_key_phrases"
version = "1.0"
description = "This REST API will extract the key phrases or keywords from the input text"
authors = ["Vimal <vimal@quilt.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"
uuid = "^1.30"
pandas = "^1.3.0"
nltk = "^3.6.2"
rake-nltk = "^1.0.4"
python-dotenv = "^0.18.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
